@@ -1,4 +1,4 @@
-package dev.mflash.guides.spring.hikari.leakdetection;
+package com.example;
 
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -6,7 +6,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/book")
@@ -20,6 +19,6 @@ public class BookController {
 
 	@GetMapping("/{genre}")
 	public List<Book> getAllBooksByGenre(@PathVariable Genre genre) {
-		return repository.findAllByGenre(genre).collect(Collectors.toList());
+		return repository.findAllByGenre(genre).toList();
 	}
 }
